# podcast_catcher

./: .gitignore  LICENSE  README.adoc  README.rst  invoke.yml  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
config/: config.json
doc/: .attributes-page.adoc
podcast_catcher/: __init__.py  config.py  config.schema.json  config_factory.py  config_file.py  config_json_factory.py  episode_tracker.py  exception.py  feed.py  http_loader.py  id3tagger.py  main_cli.py  replacer.py  version.py
