[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
license = { file = 'LICENSE' }
name = "podcast_catcher"
authors = [{ name = 'Karsten Brand', email = 'karsten@drehtuer.de' }]
description = 'Simple podcast catcher, which offers flexible renaming and ID3 re-tagging options.'
readme = 'README.rst'
requires-python = '>=3.8'
classifiers = [
  'Development Status :: 3 - Alpha',
  'Programming Language :: Python :: 3',
  'Operating System :: OS Independent',
  'Multimedia :: Sound/Audio',
  'Internet :: WWW/HTTP',
]
keywords = ['rss', 'atom', 'podcast']
dependencies = ['requests>=2.31.0', 'eyed3>=0.9.7', 'feedparser>=6.0.10']
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/drehtuer/podcast_catcher'
Repository = 'https://github.com/drehtuer/podcast_catcher.git'
Issues = 'https://github.com/drehtuer/podcast_catcher/issues'

[project.scripts]
podcast_catcher_cli = 'podcast_catcher:main_cli'


[tool.ruff]
# https://docs.astral.sh/ruff
exclude = [".rst", ".devcontainer", ".vscode"]

indent-width = 2
target-version = "py312"


[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # import sort
  "I",
  # naming
  "N",
  # pydocstyle
  "D",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
]
ignore = [
  # pydocstyle
  "D200",
  "D205",
  "D212",
]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
